--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "csurf": "^1.11.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "express-session": "^1.17.2"
+    "express-session": "^1.17.2",
+    "express-validator": "^6.11.1"
   }
 }
