--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
-    "express-validator": "^6.11.1",
-    "helmet": "^4.6.0"
+    "express-validator": "^6.11.1"
   }
 }
